--- a/page1.html
+++ b/page1.html
@@ -2,11 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Gitpage</title>
+    <title>Page1</title>
     <link rel="stylesheet" type="text/css" href="/gitPage.CSS.css">
 </head>
 <body>
-<h1>Kristian H. GitPages</h1>
+
+<h1>This is page 1 on git pages</h1>
+
 
 </body>
 </html>
